comments added to examples

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,11 @@ platform = atmelavr
 board = nanoatmega328new
 framework = arduino
 lib_deps = 
-	; xreef/EByte LoRa E32 library@^1.5.5
+    Wire
 	adafruit/DHT sensor library@^1.4.3
 	envirodiy/SensorModbusMaster@^0.6.8
 	paulstoffregen/AltSoftSerial@^1.4
 	adafruit/Adafruit Unified Sensor@^1.1.5
 	dfrobot/DFRobot_SHT20@^1.0.0
 monitor_speed = 115200
-upload_port = /dev/cu.usbserial-14230
+upload_port = /dev/cu.usbserial-1410
